# abuelos-app

./: .env.example  .gitignore  CLAUDE.md  README.md  design-graphic.md  design.md  docker-compose.yml  planning.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  seed.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  health.py  nursing_notes.py  residents.py
backend/app/core/: config.py  dependencies.py  security.py  utils.py
backend/app/db/: mongodb.py
backend/app/models/: nursing_note.py  resident.py
backend/app/schemas/: auth.py  nursing_note.py  resident.py
backend/app/services/: auth_service.py  email_service.py  nursing_note_service.py  resident_service.py
backend/app/templates/: confirm_email.html  resident_pdf.html
backend/scripts/: seed_notes.py
backend/tests/: test_health.py
deploy-celeron/: .env.production.example  .wslconfig.example  ecosystem.config.js  production-celeron.md  setup-wsl.sh
docs/: FICHA GERONTOLOGICA.docx  FORMATO EVOLUCION EN ENFERMERIA.docx  FORMATOS.xlsx  PLANTILLA DE CONTRATO DE PRESTACION DE SERVICIOS.docx  nurse_notes.md  residents_file.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(public)/login/: page.tsx
frontend/app/(public)/register/: page.tsx
frontend/app/[company]/(protected)/: layout.tsx
frontend/components/auth/: InactivityTimer.tsx
frontend/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/lib/: api.ts  auth-context.tsx  colombia-cities.ts
frontend/messages/: en.json  es.json
(+6 files in other folders)
