[project]
name = "backend"
version = "0.1.0"
description = "abuelos-app — gerontological center management API"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.1",
    "bcrypt>=4.0.0",
    "fastapi[standard]>=0.137.2",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.32",
    "tzdata>=2026.2",
    "weasyprint>=62.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
